// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Editor reducer should handle EDITOR_CHANGE_DIFF_VIEW 1`] = `
Object {
  "diffViewType": "unified",
  "editorName": "editor",
  "errorText": "",
  "filteredHosts": Array [],
  "hosts": Array [],
  "isFetchingHosts": false,
  "isLoading": false,
  "isMasked": false,
  "isMaximized": false,
  "isRendering": false,
  "isSearchingHosts": false,
  "isSelectOpen": false,
  "keyBinding": "Default",
  "mode": "Ruby",
  "previewResult": "",
  "readOnly": false,
  "renderedEditorValue": "",
  "searchQuery": "",
  "selectedHost": Object {
    "id": "",
    "name": "",
  },
  "selectedView": "input",
  "showError": false,
  "templateClass": "",
  "theme": "Monokai",
  "value": "",
}
`;

exports[`Editor reducer should handle EDITOR_CHANGE_SETTING 1`] = `
Object {
  "diffViewType": "split",
  "editorName": "editor",
  "errorText": "",
  "filteredHosts": Array [],
  "hosts": Array [],
  "isFetchingHosts": false,
  "isLoading": false,
  "isMasked": false,
  "isMaximized": false,
  "isRendering": false,
  "isSearchingHosts": false,
  "isSelectOpen": false,
  "keyBinding": "Default",
  "mode": "html",
  "previewResult": "",
  "readOnly": false,
  "renderedEditorValue": "",
  "searchQuery": "",
  "selectedHost": Object {
    "id": "",
    "name": "",
  },
  "selectedView": "input",
  "showError": false,
  "templateClass": "",
  "theme": "Monokai",
  "value": "",
}
`;

exports[`Editor reducer should handle EDITOR_CHANGE_STATE 1`] = `
Object {
  "diffViewType": "split",
  "editorName": "editor",
  "errorText": "",
  "filteredHosts": Array [],
  "hosts": Array [],
  "isFetchingHosts": false,
  "isLoading": false,
  "isMasked": false,
  "isMaximized": false,
  "isRendering": false,
  "isSearchingHosts": false,
  "isSelectOpen": false,
  "keyBinding": "Default",
  "mode": "Ruby",
  "previewResult": "",
  "readOnly": false,
  "renderedEditorValue": "",
  "searchQuery": "",
  "selectedHost": Object {
    "id": "",
    "name": "",
  },
  "selectedView": "input",
  "showError": false,
  "templateClass": "",
  "theme": "Monokai",
  "value": "< newValue />",
}
`;

exports[`Editor reducer should handle EDITOR_CHANGE_TAB 1`] = `
Object {
  "diffViewType": "split",
  "editorName": "editor",
  "errorText": "",
  "filteredHosts": Array [],
  "hosts": Array [],
  "isFetchingHosts": false,
  "isLoading": false,
  "isMasked": false,
  "isMaximized": false,
  "isRendering": false,
  "isSearchingHosts": false,
  "isSelectOpen": false,
  "keyBinding": "Default",
  "mode": "Ruby",
  "previewResult": "",
  "readOnly": false,
  "renderedEditorValue": "",
  "searchQuery": "",
  "selectedHost": Object {
    "id": "",
    "name": "",
  },
  "selectedView": "diff",
  "showError": false,
  "templateClass": "",
  "theme": "Monokai",
  "value": "",
}
`;

exports[`Editor reducer should handle EDITOR_DISMISS_ERROR 1`] = `
Object {
  "diffViewType": "split",
  "editorName": "editor",
  "errorText": "",
  "filteredHosts": Array [],
  "hosts": Array [],
  "isFetchingHosts": false,
  "isLoading": false,
  "isMasked": false,
  "isMaximized": false,
  "isRendering": false,
  "isSearchingHosts": false,
  "isSelectOpen": false,
  "keyBinding": "Default",
  "mode": "Ruby",
  "previewResult": "",
  "readOnly": false,
  "renderedEditorValue": "",
  "searchQuery": "",
  "selectedHost": Object {
    "id": "",
    "name": "",
  },
  "selectedView": "input",
  "showError": false,
  "templateClass": "",
  "theme": "Monokai",
  "value": "",
}
`;

exports[`Editor reducer should handle EDITOR_EXEC_PREVIEW 1`] = `
Object {
  "diffViewType": "split",
  "editorName": "editor",
  "errorText": "",
  "filteredHosts": Array [],
  "hosts": Array [],
  "isFetchingHosts": false,
  "isLoading": false,
  "isMasked": false,
  "isMaximized": false,
  "isRendering": false,
  "isSearchingHosts": false,
  "isSelectOpen": false,
  "keyBinding": "Default",
  "mode": "Ruby",
  "previewResult": "</>",
  "readOnly": false,
  "renderedEditorValue": "",
  "searchQuery": "",
  "selectedHost": Object {
    "id": "",
    "name": "",
  },
  "selectedView": "input",
  "showError": false,
  "templateClass": "",
  "theme": "Monokai",
  "value": "",
}
`;

exports[`Editor reducer should handle EDITOR_FETCH_HOST_PENDING 1`] = `
Object {
  "diffViewType": "split",
  "editorName": "editor",
  "errorText": "",
  "filteredHosts": Array [],
  "hosts": Array [],
  "isFetchingHosts": true,
  "isLoading": false,
  "isMasked": false,
  "isMaximized": false,
  "isRendering": false,
  "isSearchingHosts": true,
  "isSelectOpen": false,
  "keyBinding": "Default",
  "mode": "Ruby",
  "previewResult": "",
  "readOnly": false,
  "renderedEditorValue": "",
  "searchQuery": "value",
  "selectedHost": Object {
    "id": "",
    "name": "",
  },
  "selectedView": "input",
  "showError": false,
  "templateClass": "",
  "theme": "Monokai",
  "value": "",
}
`;

exports[`Editor reducer should handle EDITOR_FETCH_HOST_RESOLVED 1`] = `
Object {
  "diffViewType": "split",
  "editorName": "editor",
  "errorText": "",
  "filteredHosts": Array [],
  "hosts": Array [
    Object {
      "id": "1",
      "name": "html",
    },
  ],
  "isFetchingHosts": false,
  "isLoading": false,
  "isMasked": false,
  "isMaximized": false,
  "isRendering": false,
  "isSearchingHosts": false,
  "isSelectOpen": false,
  "keyBinding": "Default",
  "mode": "Ruby",
  "previewResult": "",
  "readOnly": false,
  "renderedEditorValue": "",
  "searchQuery": "",
  "selectedHost": Object {
    "id": "",
    "name": "",
  },
  "selectedView": "input",
  "showError": false,
  "templateClass": "",
  "theme": "Monokai",
  "value": "",
}
`;

exports[`Editor reducer should handle EDITOR_HIDE_LOADING 1`] = `
Object {
  "diffViewType": "split",
  "editorName": "editor",
  "errorText": "",
  "filteredHosts": Array [],
  "hosts": Array [],
  "isFetchingHosts": false,
  "isLoading": false,
  "isMasked": false,
  "isMaximized": false,
  "isRendering": false,
  "isSearchingHosts": false,
  "isSelectOpen": false,
  "keyBinding": "Default",
  "mode": "Ruby",
  "previewResult": "",
  "readOnly": false,
  "renderedEditorValue": "",
  "searchQuery": "",
  "selectedHost": Object {
    "id": "",
    "name": "",
  },
  "selectedView": "input",
  "showError": false,
  "templateClass": "",
  "theme": "Monokai",
  "value": "",
}
`;

exports[`Editor reducer should handle EDITOR_HOST_INITIAL_FETCH 1`] = `
Object {
  "diffViewType": "split",
  "editorName": "editor",
  "errorText": "",
  "filteredHosts": Array [],
  "hosts": Array [
    Object {
      "id": "1",
      "name": "html",
    },
  ],
  "isFetchingHosts": false,
  "isLoading": false,
  "isMasked": false,
  "isMaximized": false,
  "isRendering": false,
  "isSearchingHosts": false,
  "isSelectOpen": false,
  "keyBinding": "Default",
  "mode": "Ruby",
  "previewResult": "",
  "readOnly": false,
  "renderedEditorValue": "",
  "searchQuery": "",
  "selectedHost": Object {
    "id": "",
    "name": "",
  },
  "selectedView": "input",
  "showError": false,
  "templateClass": "",
  "theme": "Monokai",
  "value": "",
}
`;

exports[`Editor reducer should handle EDITOR_HOST_SELECT_CLEAR 1`] = `
Object {
  "diffViewType": "split",
  "editorName": "editor",
  "errorText": "",
  "filteredHosts": Array [],
  "hosts": Array [],
  "isFetchingHosts": false,
  "isLoading": false,
  "isMasked": false,
  "isMaximized": false,
  "isRendering": false,
  "isSearchingHosts": false,
  "isSelectOpen": false,
  "keyBinding": "Default",
  "mode": "Ruby",
  "previewResult": "",
  "readOnly": false,
  "renderedEditorValue": "",
  "searchQuery": "",
  "selectedHost": Object {
    "id": "",
    "name": "",
  },
  "selectedView": "input",
  "showError": false,
  "templateClass": "",
  "theme": "Monokai",
  "value": "",
}
`;

exports[`Editor reducer should handle EDITOR_HOST_SELECT_RESET 1`] = `
Object {
  "diffViewType": "split",
  "editorName": "editor",
  "errorText": "",
  "filteredHosts": Array [],
  "hosts": Array [],
  "isFetchingHosts": false,
  "isLoading": false,
  "isMasked": false,
  "isMaximized": false,
  "isRendering": false,
  "isSearchingHosts": false,
  "isSelectOpen": false,
  "keyBinding": "Default",
  "mode": "Ruby",
  "previewResult": "",
  "readOnly": false,
  "renderedEditorValue": "",
  "searchQuery": "",
  "selectedHost": Object {
    "id": "",
    "name": "",
  },
  "selectedView": "input",
  "showError": false,
  "templateClass": "",
  "theme": "Monokai",
  "value": "",
}
`;

exports[`Editor reducer should handle EDITOR_HOST_SELECT_TOGGLE 1`] = `
Object {
  "diffViewType": "split",
  "editorName": "editor",
  "errorText": "",
  "filteredHosts": Array [],
  "hosts": Array [],
  "isFetchingHosts": false,
  "isLoading": false,
  "isMasked": false,
  "isMaximized": false,
  "isRendering": false,
  "isSearchingHosts": false,
  "isSelectOpen": true,
  "keyBinding": "Default",
  "mode": "Ruby",
  "previewResult": "",
  "readOnly": false,
  "renderedEditorValue": "",
  "searchQuery": "",
  "selectedHost": Object {
    "id": "",
    "name": "",
  },
  "selectedView": "input",
  "showError": false,
  "templateClass": "",
  "theme": "Monokai",
  "value": "",
}
`;

exports[`Editor reducer should handle EDITOR_IMPORT_FILE 1`] = `
Object {
  "diffViewType": "split",
  "editorName": "editor",
  "errorText": "",
  "filteredHosts": Array [],
  "hosts": Array [],
  "isFetchingHosts": false,
  "isLoading": false,
  "isMasked": false,
  "isMaximized": false,
  "isRendering": false,
  "isSearchingHosts": false,
  "isSelectOpen": false,
  "keyBinding": "Default",
  "mode": "Ruby",
  "previewResult": "",
  "readOnly": false,
  "renderedEditorValue": "",
  "searchQuery": "",
  "selectedHost": Object {
    "id": "",
    "name": "",
  },
  "selectedView": "input",
  "showError": false,
  "templateClass": "",
  "theme": "Monokai",
  "value": "</>",
}
`;

exports[`Editor reducer should handle EDITOR_INITIALIZE 1`] = `
Object {
  "diffViewType": "split",
  "editorName": "editor",
  "errorText": "",
  "filteredHosts": Array [],
  "hosts": Array [],
  "isFetchingHosts": false,
  "isLoading": false,
  "isMasked": false,
  "isMaximized": false,
  "isRendering": false,
  "isSearchingHosts": false,
  "isSelectOpen": false,
  "keyBinding": "Default",
  "mode": "Ruby",
  "previewResult": "",
  "readOnly": false,
  "renderedEditorValue": "",
  "searchQuery": "",
  "selectedHost": Object {
    "id": "",
    "name": "",
  },
  "selectedView": "input",
  "showError": false,
  "templateClass": "",
  "theme": "Monokai",
  "value": "newValue",
}
`;

exports[`Editor reducer should handle EDITOR_MODAL_TOGGLE 1`] = `
Object {
  "diffViewType": "split",
  "editorName": "editor",
  "errorText": "",
  "filteredHosts": Array [],
  "hosts": Array [],
  "isFetchingHosts": false,
  "isLoading": false,
  "isMasked": false,
  "isMaximized": true,
  "isRendering": false,
  "isSearchingHosts": false,
  "isSelectOpen": false,
  "keyBinding": "Default",
  "mode": "Ruby",
  "previewResult": "",
  "readOnly": false,
  "renderedEditorValue": "",
  "searchQuery": "",
  "selectedHost": Object {
    "id": "",
    "name": "",
  },
  "selectedView": "input",
  "showError": false,
  "templateClass": "",
  "theme": "Monokai",
  "value": "",
}
`;

exports[`Editor reducer should handle EDITOR_REVERT_CHANGES 1`] = `
Object {
  "diffViewType": "split",
  "editorName": "editor",
  "errorText": "",
  "filteredHosts": Array [],
  "hosts": Array [],
  "isFetchingHosts": false,
  "isLoading": false,
  "isMasked": false,
  "isMaximized": false,
  "isRendering": false,
  "isSearchingHosts": false,
  "isSelectOpen": false,
  "keyBinding": "Default",
  "mode": "Ruby",
  "previewResult": "",
  "readOnly": false,
  "renderedEditorValue": "",
  "searchQuery": "",
  "selectedHost": Object {
    "id": "",
    "name": "",
  },
  "selectedView": "input",
  "showError": false,
  "templateClass": "",
  "theme": "Monokai",
  "value": "</>",
}
`;

exports[`Editor reducer should handle EDITOR_SHOW_ERROR 1`] = `
Object {
  "diffViewType": "split",
  "editorName": "editor",
  "errorText": "error",
  "filteredHosts": Array [],
  "hosts": Array [],
  "isFetchingHosts": false,
  "isLoading": false,
  "isMasked": false,
  "isMaximized": false,
  "isRendering": false,
  "isSearchingHosts": false,
  "isSelectOpen": false,
  "keyBinding": "Default",
  "mode": "Ruby",
  "previewResult": "error",
  "readOnly": false,
  "renderedEditorValue": "",
  "searchQuery": "",
  "selectedHost": Object {
    "id": "",
    "name": "",
  },
  "selectedView": "input",
  "showError": true,
  "templateClass": "",
  "theme": "Monokai",
  "value": "",
}
`;

exports[`Editor reducer should handle EDITOR_SHOW_LOADING 1`] = `
Object {
  "diffViewType": "split",
  "editorName": "editor",
  "errorText": "",
  "filteredHosts": Array [],
  "hosts": Array [],
  "isFetchingHosts": false,
  "isLoading": true,
  "isMasked": false,
  "isMaximized": false,
  "isRendering": false,
  "isSearchingHosts": false,
  "isSelectOpen": false,
  "keyBinding": "Default",
  "mode": "Ruby",
  "previewResult": "",
  "readOnly": false,
  "renderedEditorValue": "",
  "searchQuery": "",
  "selectedHost": Object {
    "id": "",
    "name": "",
  },
  "selectedView": "input",
  "showError": false,
  "templateClass": "",
  "theme": "Monokai",
  "value": "",
}
`;

exports[`Editor reducer should handle EDITOR_TOGGLE_MASK 1`] = `
Object {
  "diffViewType": "split",
  "editorName": "editor",
  "errorText": "",
  "filteredHosts": Array [],
  "hosts": Array [],
  "isFetchingHosts": false,
  "isLoading": false,
  "isMasked": true,
  "isMaximized": false,
  "isRendering": false,
  "isSearchingHosts": false,
  "isSelectOpen": false,
  "keyBinding": "Default",
  "mode": "Ruby",
  "previewResult": "",
  "readOnly": false,
  "renderedEditorValue": "",
  "searchQuery": "",
  "selectedHost": Object {
    "id": "",
    "name": "",
  },
  "selectedView": "input",
  "showError": false,
  "templateClass": "",
  "theme": "Monokai",
  "value": "",
}
`;

exports[`Editor reducer should handle EDITOR_TOGGLE_RENDER_VIEW 1`] = `
Object {
  "diffViewType": "split",
  "editorName": "editor",
  "errorText": "",
  "filteredHosts": Array [],
  "hosts": Array [],
  "isFetchingHosts": false,
  "isLoading": false,
  "isMasked": false,
  "isMaximized": false,
  "isRendering": true,
  "isSearchingHosts": false,
  "isSelectOpen": false,
  "keyBinding": "Default",
  "mode": "Ruby",
  "previewResult": "",
  "readOnly": false,
  "renderedEditorValue": "",
  "searchQuery": "",
  "selectedHost": Object {
    "id": "",
    "name": "",
  },
  "selectedView": "input",
  "showError": false,
  "templateClass": "",
  "theme": "Monokai",
  "value": "",
}
`;

exports[`Editor reducer should return the initial state 1`] = `
Object {
  "diffViewType": "split",
  "editorName": "editor",
  "errorText": "",
  "filteredHosts": Array [],
  "hosts": Array [],
  "isFetchingHosts": false,
  "isLoading": false,
  "isMasked": false,
  "isMaximized": false,
  "isRendering": false,
  "isSearchingHosts": false,
  "isSelectOpen": false,
  "keyBinding": "Default",
  "mode": "Ruby",
  "previewResult": "",
  "readOnly": false,
  "renderedEditorValue": "",
  "searchQuery": "",
  "selectedHost": Object {
    "id": "",
    "name": "",
  },
  "selectedView": "input",
  "showError": false,
  "templateClass": "",
  "theme": "Monokai",
  "value": "",
}
`;
